feat: add docker config

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"module": "src/index.tsx",
 	"scripts": {
 		"dev": "bun --hot src/index.tsx",
-		"start": "NODE_ENV=production bun src/index.tsx",
+		"start": "NODE_ENV=production bun dist/index.html",
 		"build": "bun run build.ts",
 		"prod": "NODE_ENV=production bun run build.ts && bun dist/index.html"
 	},
