--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"bun-plugin-tailwind": "^0.0.14",
 		"daisyui": "^5.0.9",
 		"heic-convert": "^2.1.0",
+		"playwright": "^1.51.1",
 		"react": "^19",
 		"react-dom": "^19",
 		"tailwindcss": "^4.0.6",
