--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"main": "src/index.tsx",
 	"module": "src/index.tsx",
 	"scripts": {
-		"dev": "bun --hot src/index.tsx",
+		"dev": "bun --hot --watch src/index.tsx",
+		"ts": "bunx --bun tsc -w --noEmit --project tsconfig.json",
 		"start": "NODE_ENV=production bun dist/index.html",
 		"build": "bun run build.ts"
 	},
@@ -15,11 +16,13 @@
 		"bun-plugin-tailwind": "^0.0.14",
 		"daisyui": "^5.0.9",
 		"heic-convert": "^2.1.0",
+		"nanoid": "^5.1.5",
 		"playwright": "^1.51.1",
 		"react": "^19",
 		"react-dom": "^19",
 		"tailwindcss": "^4.0.6",
-		"webp-converter-browser": "^1.0.4"
+		"webp-converter-browser": "^1.0.4",
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
