--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,7 @@
 		"paths": {
 			"@/*": ["./src/*"]
 		}
-	}
+	},
+	"include": ["src/**/*.ts", "src/**/*.tsx"],
+	"exclude": ["node_modules", "dist", "build", "public", "uploads"]
 }
