--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,7 @@ PUBLIC_SERVER_URL=http://localhost:3000
 UPLOAD_DIR=uploads
 NODE_ENV=development
 PORT=3000
+
+GOOGLE_CLOUD_PROJECT_ID=qwerty
+GOOGLE_CLOUD_BUCKET_NAME=qwerty_bucket
+GOOGLE_CLOUD_KEY_FILE_PATH=/path/to/storage-service-account.json
