--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"bun-plugin-tailwind": "^0.0.15",
 		"daisyui": "^5.0.9",
 		"dotenv": "^16.4.7",
+		"file-type": "^20.4.1",
 		"heic-convert": "^2.1.0",
 		"nanoid": "^5.1.5",
 		"playwright": "^1.51.1",
